--- a/docs/resources/game-style.css
+++ b/docs/resources/game-style.css
@@ -9,7 +9,9 @@ canvas{
 	text-align: center;
 }
 
-#button-panel button{
+.button-panel-control{
+	font-size: 12px;
+
 	color: white;
 	background-color: rgba(80, 80, 80, 0.6);
 	border: none;
@@ -18,14 +20,21 @@ canvas{
 	transition: 0.2s;
 }
 
-#button-panel button:hover{
+.button-panel-control:hover{
 	background-color: rgba(100, 100, 100, 0.6);
+	color: white;
 }
 
-#button-panel button:active{
+.button-panel-control:active{
 	background-color: rgba(130, 130, 130, 0.6);
+	color: white;
 }
 
-#button-panel button:focus{
+.button-panel-control:focus{
 	outline: 0;
+}
+
+#button-panel a{
+	text-decoration: none;
+	font-size: 12px;
 }
