--- a/docs/resources/game-style.css
+++ b/docs/resources/game-style.css
@@ -40,6 +40,7 @@ canvas{
 .button-panel a{
 	text-decoration: none;
 	font-size: 12px;
+	font-family: "Roboto Mono", monospace;
 }
 
 #first-move-button:disabled{
