--- a/docs/resources/game-style.css
+++ b/docs/resources/game-style.css
@@ -7,11 +7,14 @@ canvas{
 }
 
 html, body {
+	width: 100%;
+	height: 100%;
 	background: linear-gradient(to bottom right, #111, #333);
 }
 
 h1 {
-	text-align: center;	
+	text-align: center;
+	font-family: "Roboto Mono", monospace;
 }
 
 .button-panel{
