--- a/style.css
+++ b/style.css
@@ -6,15 +6,19 @@ canvas{
 	cursor: pointer;
 }
 
-html, body {
+html {
 	width: 100%;
 	height: 100%;
 	background: linear-gradient(to bottom right, #111, #333);
+	font-family: "Roboto Mono", monospace;
+	font-size: 12px;
+	color: white;
 }
 
 h1 {
 	text-align: center;
-	font-family: "Roboto Mono", monospace;
+	color: white;
+	font-size: 20px;
 }
 
 .button-panel{
@@ -23,10 +27,6 @@ h1 {
 }
 
 .button-panel-control{
-	font-size: 12px;
-	font-family: "Roboto Mono", monospace;
-
-	color: white;
 	background-color: rgba(80, 80, 80, 0.6);
 	border: none;
 	border-radius: 2px;
@@ -36,12 +36,10 @@ h1 {
 
 .button-panel-control:hover:enabled{
 	background-color: rgba(100, 100, 100, 0.6);
-	color: white;
 }
 
 .button-panel-control:active:enabled{
 	background-color: rgba(130, 130, 130, 0.6);
-	color: white;
 }
 
 .button-panel-control:focus:enabled{
@@ -50,8 +48,6 @@ h1 {
 
 .button-panel a{
 	text-decoration: none;
-	font-size: 12px;
-	font-family: "Roboto Mono", monospace;
 }
 
 #first-move-button:disabled{
