--- a/style.css
+++ b/style.css
@@ -10,15 +10,18 @@ html {
 	width: 100%;
 	height: 100%;
 	background: linear-gradient(to bottom right, #111, #333);
+}
+
+body {
 	font-family: "Roboto Mono", monospace;
-	font-size: 12px;
+	font-size: 1em;
 	color: white;
 }
 
 h1 {
 	text-align: center;
 	color: white;
-	font-size: 20px;
+	font-size: 3em;
 }
 
 .button-panel{
@@ -52,5 +55,5 @@ h1 {
 
 #first-move-button:disabled{
 	background-color: rgba(60, 60, 60, 0.6);
-	color: rgb(120, 120, 120);
+	color: grey;
 }
